rhi manual tests: allow having some gui controls
Having a simple Dear ImGui bridge is not just useful for the manual
tests, which do not have any other means to displays GUIs, but is
in itself an important exercise for the QRhi machinery.

Have a new manual test that exercises the built-in ImGui demo window.
Then use it in the displacement test for real, to replace the myriads
of key presses with on-screen sliders and checkboxes (with less code).

Change-Id: I296bafae2a5cce6fc7a447d97e68e5bcec15f451
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>

--- a/tests/manual/rhi/CMakeLists.txt
+++ b/tests/manual/rhi/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(stenciloutline)
 add_subdirectory(stereo)
 add_subdirectory(tex1d)
 add_subdirectory(displacement)
+add_subdirectory(imguirenderer)
 if(QT_FEATURE_widgets)
     add_subdirectory(rhiwidget)
 endif()
