Move CTF tracing plugin to plugins directory
A coming change to support streaming requires networking so having it
in corelib is dubious.

Pick-to: 6.5
Change-Id: Idc25abe23b5ed07823d749294796c9f318ef1744
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>

--- a/src/plugins/tracing/CMakeLists.txt
+++ b/src/plugins/tracing/CMakeLists.txt
@@ -18,6 +18,6 @@ qt_internal_add_plugin(QCtfTracePlugin
     SOURCES
         qctflib_p.h qctflib.cpp metadata_template.txt qctfplugin.cpp qctfplugin_p.h
     LIBRARIES
-        Qt6::Core
+        Qt6::Core Qt6::CorePrivate
 )
 
