--- a/examples/corelib/serialization/CMakeLists.txt
+++ b/examples/corelib/serialization/CMakeLists.txt
@@ -7,3 +7,6 @@ qt_internal_add_example(savegame)
 if(TARGET Qt6::Network AND TARGET Qt6::Widgets)
     qt_internal_add_example(rsslisting)
 endif()
+if(TARGET Qt6::Widgets)
+    qt_internal_add_example(streambookmarks)
+endif()
