remotecontrolledcar example: Move executables into single example project
This allows building of all the example executables at once.

Task-number: QTBUG-111366
Pick-to: 6.5
Change-Id: I1fa372ec9725bfeb1f123305aa7324b7820eb593
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>

--- a/examples/dbus/CMakeLists.txt
+++ b/examples/dbus/CMakeLists.txt
@@ -10,5 +10,5 @@ if(QT_FEATURE_process)
 endif()
 if(TARGET Qt6::Widgets)
     qt_internal_add_example(chat)
-    add_subdirectory(remotecontrolledcar)
+    qt_internal_add_example(remotecontrolledcar)
 endif()
