Remove libQt6Xml dependency in rsslisting example
This example does not use libQt6Xml, remove dependency.

Task-number: QTBUG-110647
Pick-to: 6.5 6.2
Change-Id: Ida8c4df0e274cbc2e0a5f7151f18693d7e1c2401
Reviewed-by: Marc Mutz <marc.mutz@qt.io>

--- a/examples/xml/rsslisting/CMakeLists.txt
+++ b/examples/xml/rsslisting/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/xml/rsslisting")
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Network Widgets Xml)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Network Widgets)
 
 qt_standard_project_setup()
 
@@ -29,7 +29,6 @@ target_link_libraries(rsslisting PRIVATE
     Qt6::Gui
     Qt6::Network
     Qt6::Widgets
-    Qt6::Xml
 )
 
 install(TARGETS rsslisting
