Remove libQt6Xml dependency in streambookmarks example
This example does not use libQt6Xml, remove dependency.

Task-number: QTBUG-110647
Pick-to: 6.5 6.2
Change-Id: I40e5976121ddc97a78b540d17784b3357b87adf7
Reviewed-by: Marc Mutz <marc.mutz@qt.io>

--- a/examples/xml/streambookmarks/CMakeLists.txt
+++ b/examples/xml/streambookmarks/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/xml/streambookmarks")
 
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Xml)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
 
 qt_standard_project_setup()
 
@@ -30,7 +30,6 @@ target_link_libraries(streambookmarks PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Widgets
-    Qt6::Xml
 )
 
 install(TARGETS streambookmarks
