Clean up NO_UNITY_BUILD instruction
We can now use NO_UNITY_BUILD_SOURCES instead, and we only need to
exclude one of the file to avoid the exclusion.

Task-number: QTBUG-109394
Pick-to: 6.5
Change-Id: I33642eece77e362f8a1de7400c14a30da7889239
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/plugins/platforms/windows/CMakeLists.txt
+++ b/src/plugins/platforms/windows/CMakeLists.txt
@@ -38,6 +38,8 @@ qt_internal_add_plugin(QWindowsIntegrationPlugin
         qwindowstheme.cpp qwindowstheme.h
         qwindowsthreadpoolrunner.h
         qwindowswindow.cpp qwindowswindow.h
+    NO_UNITY_BUILD_SOURCES
+        qwindowspointerhandler.cpp
     DEFINES
         QT_NO_CAST_FROM_ASCII
         QT_NO_FOREACH
@@ -65,10 +67,6 @@ qt_internal_add_plugin(QWindowsIntegrationPlugin
         d3d9
         runtimeobject
 )
-
-# Duplicated symbols
-set_source_files_properties(qwindowspointerhandler.cpp qwindowsmousehandler.cpp
-                            PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
 
 # Resources:
 set_source_files_properties("openglblacklists/default.json"
