--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -315,6 +315,13 @@ qt_internal_add_module(Core
         # despite the fact that appropriate checks are in place to avoid that!
         tools/qshareddata.cpp tools/qshareddata.h
         text/qlocale.cpp text/qlocale.h
+        global/qglobal.cpp  # undef qFatal
+        global/qlogging.cpp # undef qFatal
+        text/qstringconverter.cpp # enum Data
+        tools/qcryptographichash.cpp # KeccakNISTInterface/Final
+    NO_PCH_SOURCES
+        compat/removed_api.cpp
+        global/qsimd.cpp
     DEFINES
         QT_NO_FOREACH
         QT_NO_USING_NAMESPACE
@@ -341,15 +348,6 @@ qt_internal_add_module(Core
         QTP0002
 )
 _qt_internal_setup_deploy_support()
-
-set(corelib_no_pch_sources
-    compat/removed_api.cpp
-    global/qsimd.cpp
-)
-
-foreach(src ${corelib_no_pch_sources})
-    qt_update_ignore_pch_source(Core ${src})
-endforeach()
 
 add_dependencies(Core qmodule_pri)
 
@@ -523,7 +521,6 @@ qt_internal_extend_target(Core CONDITION WIN32
         kernel/qwinregistry.cpp kernel/qwinregistry_p.h
         plugin/qsystemlibrary.cpp plugin/qsystemlibrary_p.h
         thread/qthread_win.cpp
-    # DEFINES # special case: remove
     LIBRARIES
         advapi32
         authz
@@ -539,6 +536,19 @@ qt_internal_extend_target(Core CONDITION WIN32
     PUBLIC_LIBRARIES
         mpr
         userenv
+)
+
+qt_internal_extend_target(Core CONDITION WIN32
+    NO_UNITY_BUILD_SOURCES
+        global/qsimd.cpp # Q_DECL_INIT_PRIORITY
+        serialization/qcborvalue.cpp # various windows.h clashes
+        serialization/qjsoncbor.cpp
+        serialization/qjsonvalue.cpp
+        serialization/qxmlstream.cpp
+        text/qbytearray.cpp
+        text/qlatin1stringmatcher.cpp
+        text/qunicodetools.cpp
+        tools/qhash.cpp # Q_DECL_INIT_PRIORITY
 )
 
 if(NOT WIN32)
@@ -941,6 +951,8 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_process AND UNIX
     SOURCES
         ../3rdparty/forkfd/forkfd.h
         io/forkfd_qt.cpp
+    NO_UNITY_BUILD_SOURCES
+        io/forkfd_qt.cpp    # EINTR_LOOP macro clashes
     INCLUDE_DIRECTORIES
         ../3rdparty/forkfd
 )
@@ -1115,6 +1127,8 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_cborstreamreader
 qt_internal_extend_target(Core CONDITION QT_FEATURE_cborstreamwriter
     SOURCES
         serialization/qcborstreamwriter.cpp serialization/qcborstreamwriter.h
+    NO_UNITY_BUILD_SOURCES
+        serialization/qcborstreamwriter.cpp # CBOR macro clashes
 )
 
 qt_internal_extend_target(Core CONDITION QT_FEATURE_mimetype
@@ -1295,31 +1309,11 @@ set_source_files_properties(
     thread/qmutex_unix.cpp
     PROPERTIES HEADER_FILE_ONLY ON)  # special case: These files are included by qmutex.cpp!
 
-set_source_files_properties(serialization/qcborstreamwriter.cpp # CBOR macro clashes
-                            io/forkfd_qt.cpp # EINTR_LOOP macro clashes
-                            global/qglobal.cpp  # undef qFatal
-                            global/qlogging.cpp # undef qFatal
-                            text/qstringconverter.cpp # enum Data
-                            tools/qcryptographichash.cpp # KeccakNISTInterface/Final
-                            ${corelib_no_pch_sources} # NO_PCH_SOURCES
-                            PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
-
 # Remove QT_NO_CAST_TO_ASCII to ensure that the symbols are included in the library.
 if(WIN32)
     get_target_property(defines Core COMPILE_DEFINITIONS)
     list(REMOVE_ITEM defines QT_NO_CAST_TO_ASCII)
     set_target_properties(Core PROPERTIES COMPILE_DEFINITIONS "${defines}")
-
-    set_source_files_properties(global/qsimd.cpp # Q_DECL_INIT_PRIORITY
-                                serialization/qcborvalue.cpp # various windows.h clashes
-                                serialization/qjsoncbor.cpp
-                                serialization/qjsonvalue.cpp
-                                serialization/qxmlstream.cpp
-                                text/qbytearray.cpp
-                                text/qlatin1stringmatcher.cpp
-                                text/qunicodetools.cpp
-                                tools/qhash.cpp # Q_DECL_INIT_PRIORITY
-                                PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
 endif()
 
 qt_internal_apply_gc_binaries_conditional(Core PUBLIC)
