Use NO_UNITY_BUILD instead of directly setting the property
Pick-to: 6.5
Change-Id: I4f39f7c306cddb3fe6797ac4aa3c3c08d573962c
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/qmake/CMakeLists.txt
+++ b/qmake/CMakeLists.txt
@@ -57,6 +57,7 @@ qt_get_tool_target_name(target_name qmake)
 qt_internal_add_tool(${target_name}
     TOOLS_TARGET Core # special case
     USER_FACING
+    NO_UNITY_BUILD
     INSTALL_VERSIONED_LINK
     SOURCES
         cachekeys.h
@@ -136,7 +137,6 @@ set_target_properties(${target_name} PROPERTIES
     AUTOMOC OFF
     AUTORCC OFF
     AUTOUIC OFF
-    UNITY_BUILD OFF
 )
 
 qt_internal_apply_gc_binaries(${target_name} PRIVATE) # special case
