q20: add C++20 chrono days/weeks/months/years
Change-Id: Ie2a167cbe6672694e15b7810daf7fad3fe0656a1
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -99,6 +99,7 @@ qt_internal_add_module(Core
         ${core_version_tagging_files}
         global/qvolatile_p.h
         global/q20algorithm.h
+        global/q20chrono.h
         global/q20functional.h
         global/q20iterator.h
         global/q20memory.h
