Exclude sources from the Unity Build
There are patches for addressing the issues raised by these two source
files; however, it would be beneficial to exclude them temporary while
we are testing, and debugging the unity build on CI.

Pick-to: 6.5
Task-number: QTBUG-109394
Change-Id: Ie8631cf1df086b22967a8cc41874a3ef856c3ef8
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -589,6 +589,8 @@ qt_internal_extend_target(Core CONDITION APPLE
         # This makes sure that the tst_qmakelib passes. For some reason,
         # QtCore ends up returning a corrupted error message in
         # write_file(): fail
+        kernel/qelapsedtimer_mac.cpp # Temporary exclusion, until this,
+                                     # https://codereview.qt-project.org/c/qt/qtbase/+/462132, is merged
 )
 
 qt_internal_extend_target(Core CONDITION MACOS
