Rid of 'special case' markers
It's unlikely we will ever use pro2cmake at this project stage,
so it doesn't make any sense to keep the 'special case' markers
in the CMake scripts. Remove them and replace with TODO where
needed.

Change-Id: I84290c20679dabbfdec3c5937ce0428fecb3e5a7
Reviewed-by: Amir Masoud Abdol <amir.abdol@qt.io>
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/qmake/CMakeLists.txt
+++ b/qmake/CMakeLists.txt
@@ -55,7 +55,7 @@ endif()
 
 qt_get_tool_target_name(target_name qmake)
 qt_internal_add_tool(${target_name}
-    TOOLS_TARGET Core # special case
+    TOOLS_TARGET Core
     USER_FACING
     NO_UNITY_BUILD
     INSTALL_VERSIONED_LINK
@@ -118,7 +118,6 @@ qt_internal_extend_target(${target_name} CONDITION MACOS
         "-fconstant-cfstrings"
 )
 
-# special case big
 qt_internal_extend_target(${target_name} CONDITION WIN32
     SOURCES
         library/registry.cpp
@@ -132,18 +131,15 @@ qt_internal_extend_target(${target_name} CONDITION CLANG AND WIN32
         "-Wno-microsoft-enum-value"
 )
 
-# special case:
 set_target_properties(${target_name} PROPERTIES
     AUTOMOC OFF
     AUTORCC OFF
     AUTOUIC OFF
 )
 
-qt_internal_apply_gc_binaries(${target_name} PRIVATE) # special case
-qt_skip_warnings_are_errors(${target_name}) # special case
+qt_internal_apply_gc_binaries(${target_name} PRIVATE)
+qt_skip_warnings_are_errors(${target_name})
 
-# special case begin
 qt_internal_add_docs(${target_name}
     doc/qmake.qdocconf
 )
-# special case end
