--- a/src/dbus/CMakeLists.txt
+++ b/src/dbus/CMakeLists.txt
@@ -52,8 +52,9 @@ qt_internal_add_module(DBus
     GENERATE_CPP_EXPORTS
 )
 
+# This file is included by qdbusargument.cpp
 set_source_files_properties(qdbusmarshaller.cpp
-    PROPERTIES HEADER_FILE_ONLY ON)  # special case: This file is included by qdbusargument.cpp
+    PROPERTIES HEADER_FILE_ONLY ON)
 
 ## Scopes:
 #####################################################################
