--- a/src/plugins/platforms/CMakeLists.txt
+++ b/src/plugins/platforms/CMakeLists.txt
@@ -42,16 +42,16 @@ if(QT_FEATURE_vnc AND TARGET Qt::Network)
     add_subdirectory(vnc)
 endif()
 if(FREEBSD)
-    # add_subdirectory(bsdfb) # special case TODO
+    # add_subdirectory(bsdfb) # TODO: QTBUG-112768
 endif()
 if(HAIKU)
-    # add_subdirectory(haiku) # special case TODO
+    # add_subdirectory(haiku) # TODO: QTBUG-112768
 endif()
 if(WASM)
      add_subdirectory(wasm)
 endif()
 if(QT_FEATURE_integrityfb)
-    # add_subdirectory(integrity) # special case TODO
+    # add_subdirectory(integrity) # TODO: QTBUG-112768
 endif()
 if(QT_FEATURE_vkkhrdisplay)
     add_subdirectory(vkkhrdisplay)
