--- a/src/plugins/platforms/xcb/CMakeLists.txt
+++ b/src/plugins/platforms/xcb/CMakeLists.txt
@@ -57,7 +57,6 @@ qt_internal_add_module(XcbQpaPrivate
         XCB::SYNC
         XCB::XCB
         XCB::XFIXES
-        # XCB::XINPUT # special case remove handled below
         XCB::XKB
         XKB::XKB
     NO_UNITY_BUILD # X11 define clashes
@@ -178,5 +177,5 @@ qt_internal_add_plugin(QXcbIntegrationPlugin
 
 add_subdirectory(gl_integrations)
 if(OFF)
-    add_subdirectory(xcb-static) # special case TODO: xcb-static sub folder
+    add_subdirectory(xcb-static)
 endif()
