--- a/tests/auto/other/CMakeLists.txt
+++ b/tests/auto/other/CMakeLists.txt
@@ -35,10 +35,10 @@ if(QT_FEATURE_process AND TARGET Qt::Gui AND NOT ANDROID)
     add_subdirectory(qprocess_and_guieventloop)
 endif()
 if(QT_FEATURE_accessibility_atspi_bridge AND TARGET Qt::Gui AND TARGET Qt::Widgets)
-    #add_subdirectory(qaccessibilitylinux) # special case # This test is broken
+    #add_subdirectory(qaccessibilitylinux) # TODO: This test is broken
 endif()
 if(MACOS AND TARGET Qt::Gui)
-    # add_subdirectory(macnativeevents) # special case it's disabled in qmake too
+    # add_subdirectory(macnativeevents) # TODO: it's disabled in qmake too
 endif()
 if(embedded)
     add_subdirectory(qdirectpainter)
