--- a/src/android/jar/CMakeLists.txt
+++ b/src/android/jar/CMakeLists.txt
@@ -18,6 +18,9 @@ set(java_sources
     src/org/qtproject/qt/android/QtSurface.java
     src/org/qtproject/qt/android/QtThread.java
     src/org/qtproject/qt/android/QtServiceDelegate.java
+    src/org/qtproject/qt/android/extras//QtAndroidBinder.java
+    src/org/qtproject/qt/android/extras/QtAndroidServiceConnection.java
+    src/org/qtproject/qt/android/extras/QtNative.java
 )
 
 qt_internal_add_jar(Qt${QtBase_VERSION_MAJOR}Android
