Exclude files from unity build to resolve Android's build
There are several duplicate symbols defined across android source files.
For now, excluding the conflicting files allows us to continue working
on bringing unity build to CI. I added some explanation and TODO's on
what I think can be done for resolving the conflict.

Pick-to: 6.5
Task-number: QTBUG-109394
Change-Id: Ic0b31c4ae845c69570ea5dd86316e5a795c166c4
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -981,6 +981,12 @@ qt_internal_extend_target(Core CONDITION ANDROID
         kernel/qjnihelpers.cpp kernel/qjnihelpers_p.h
         platform/android/qandroidextras_p.h platform/android/qandroidextras.cpp
         platform/android/qandroidnativeinterface.cpp
+    NO_UNITY_BUILD_SOURCES
+        platform/android/qandroidextras.cpp
+        # qtNativeClassName conflicts with similar symbols in android headers
+        # TODO: Resolve conflicts between various variables set as,
+        # `org/qtproject/qt/android/QtNative` QtAndroidPrivate might be a good
+        # place to put them.
 )
 
 qt_internal_extend_target(Core CONDITION WIN32
