QMake: fix build with clang-cl
We need to enable or disabled exception handling for this library explicitly when using clang-cl, otherwise clang-cl will throw an error and stop compiling.

Pick-to: 6.5
Change-Id: I2b2a9e5eb009cb8ce264f2de58f8bb4fdb2339c1
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/qmake/CMakeLists.txt
+++ b/qmake/CMakeLists.txt
@@ -49,6 +49,8 @@ target_compile_definitions(QtLibraryInfo PUBLIC
     ${deprecation_define}
 )
 
+qt_internal_set_exceptions_flags(QtLibraryInfo OFF)
+
 if(NOT QT_FEATURE_qmake)
     return()
 endif()
