Convert remaining QT_NO_XMLSTREAM* to use feature system
Replace the check in qxmlstream.h with a QT_REQUIRE_CONFIG since the
code that includes this header does no checking, whether on the define
or the feature, so is better off getting told about the missing
feature at the point of include than complaining about an undefined
type despite its header being overtly included.

For the rest, just do the usual transformation to QT_CONFIG(),
flipping the ones that were #ifdef rather than #ifndef, so the
condition is positive. Shifted a couple of open-braces of classes to
the next line, where they belong, in the process.

Change-Id: If9c496082f0489b0f9f4070364cbf840e603fce1
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -208,9 +208,6 @@ qt_internal_add_module(Core
         serialization/qjsonvalue.cpp serialization/qjsonvalue.h
         serialization/qjsonwriter.cpp serialization/qjsonwriter_p.h
         serialization/qtextstream.cpp serialization/qtextstream.h serialization/qtextstream_p.h
-        serialization/qxmlstream.cpp serialization/qxmlstream.h serialization/qxmlstream_p.h
-        serialization/qxmlstreamgrammar.cpp serialization/qxmlstreamgrammar_p.h
-        serialization/qxmlstreamparser_p.h
         serialization/qxmlutils.cpp serialization/qxmlutils_p.h
         text/qanystringview.h
         text/qbytearray.cpp text/qbytearray.h text/qbytearray_p.h
@@ -478,6 +475,13 @@ qt_internal_extend_target(Core CONDITION MSVC AND (TEST_architecture_arch STREQU
 qt_internal_extend_target(Core CONDITION FREEBSD
     LINK_OPTIONS
       "LINKER:--warn-unresolved-symbols"
+)
+
+qt_internal_extend_target(Core CONDITION QT_FEATURE_xmlstream
+    SOURCES
+        serialization/qxmlstream.cpp serialization/qxmlstream.h serialization/qxmlstream_p.h
+        serialization/qxmlstreamgrammar.cpp serialization/qxmlstreamgrammar_p.h
+        serialization/qxmlstreamparser_p.h
 )
 
 qt_internal_extend_target(Core CONDITION QT_FEATURE_animation
