Compile Network with NOMINMAX
On Windows, when building using Unity Build, min/max macro form
`window.h` makes it to some files, and messes up evaluation of code like
`std::numeric_limits<T>::max()` which leads to compilation error.
We don't use min/max macros in Qt base, and it might be the time to pass
NOMINMAX to our targets.

Pick-to: 6.5
Task-number: QTBUG-109394
Change-Id: Ia1ff5de36538075264c8556ef3b0416f3c15168c
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -198,6 +198,8 @@ qt_internal_extend_target(Network CONDITION WIN32
         iphlpapi
         secur32
         winhttp
+    DEFINES
+        NOMINMAX
 )
 
 qt_internal_extend_target(Network CONDITION APPLE AND NOT UIKIT
